# AI-Agent-Cloud

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FEATURES.md  LICENSE  QUICK_REFERENCE.md  README.md  SECURITY.md  TROUBLESHOOTING.md  WikiBot_using_Wikipedia_API.ipynb  community-announcement.md  docker-compose.yml  launch-posts.md  social-preview.md
.github/: DISCUSSION_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  labeler.yml  pr-validation.yml  stale-issues.yml  welcome.yml
agents/notification-agent/: AgentCard.json  README.md  pyproject.toml
agents/notification-agent/src/: agent.py  main.py
agents/resume-agent/: AgentCard.json  README.md  pyproject.toml
agents/resume-agent/src/: agent.py  main.py
backend/: requirements.txt
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: AI-Agent-Cloud-Master-Prompt.md  agent-sdk.md  api-reference.md  architecture.md  authentication.md  deployment.md  ecosystem.md  future-vision.md  good-first-issues.md  index.html  index.md  integrations.md  kubernetes.md  labels.md  maintainers.md  marketplace.md  metrics.md  observability.md  open-source-mission.md  quickstart.md  realtime.md  releases.md  roadmap.md  screenshots.md  script.js  setup.md  style.css  visual-assets.md
frontend/: package.json  tsconfig.json
nexus-agents/: __init__.py
release-notes/: launch-summary.md  roadmap-announcement.md  v0.1.0.md
scripts/: start-all.sh  start-backend.sh  start-frontend.sh
(+61 files in other folders)
